# calcium_event_classifier

./: .gitignore  README.md  __init__.py  pyproject.toml
calcium_event_classifier/: __init__.py
calcium_event_classifier/build_dataset/: GUI.py  manage_h5_files.py
calcium_event_classifier/core/: classifier_dff.py  dffdataset.py  inference.py  optimization_objective.py  train_loop.py  utils.py  zscoredffdataset.py
calcium_event_classifier/inference/: __init__.py
core/: classifier.py  classifier_2channels.py  minimal_optimization_objective.py  model.py  optimization_objective.py  plot.py  train_loop.py  utils.py  zscoredataset.py  zscoredffdataset.py
dataset/build_dataset/: GUI.py  manage_h5_files.py
datasets/: 250724_dataset_equal_classes.h5  250724_dataset_filtered.h5  250725_merged_dataset.h5  250729_dataset_2channels.h5  250729_dataset_2channels_replaced.h5  251016_test_dataset.h5  251114_dataset.h5  251114_test_dataset.h5  251117_test_dataset.h5  mixed.h5  test_dataset_250530_ratio_3_1.h5  unfiltered_zscores.h5
datasets/build_dataset/: GUI.py  manage_h5_files.py
examples/: bayesian_search.py  latent_space_evolution.py  logistic_regression_model.py  prob_distribution_evolution.py  test_classical_threshold_crossing.py  test_classifier.py  test_classifier_2channels.py  test_classifier_dff.py  test_logistic_regression.py  test_model.py  test_neurons.py  test_zscore_classifier.py  test_zscore_classifier_2channels.py  train_model.py  train_model_dff.py
inference/: inference.py
training/: train_loop.py
