[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calcium-event-classifier"
version = "0.0.1"
description = "Tools for analyzing and classifying calcium imaging data"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Dario Cupolillo"}
]
license = "MIT"
keywords = ["calcium imaging", "deep learning", "neural networks", "classification"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "torch>=1.9.0",
    "numpy>=1.19.0",
    "scipy>=1.5.0",
    "scikit-learn>=0.24.0",
    "matplotlib>=3.3.0",
    "flammkuchen>=0.1.0",
    "tqdm>=4.50.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.900",
]

[project.urls]
Homepage = "https://github.com/dcupolillo/calcium_event_classifier"
Repository = "https://github.com/dcupolillo/calcium_event_classifier.git"
Documentation = "https://github.com/dcupolillo/calcium_event_classifier/blob/main/README.md"

[tool.setuptools]
packages = ["calcium_event_classifier"]

[tool.setuptools.package-data]
calcium_event_classifier = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
